# sound_processor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
catch2/: catch_shim.hpp
src/: main.cpp
src/app/: application.cpp  application.h  args_parser.cpp  args_parser.h  converter.cpp  converter.h  filter_producers.cpp  filter_producers.h
src/core/: filter.h  filter_descriptor.h  pipeline.cpp  pipeline.h  wav_io.cpp  wav_io.h  waveform.cpp  waveform.h
src/filters/: generator_filters.cpp  generator_filters.h  transform_filters.cpp  transform_filters.h
tests/: test_args_parser.cpp  test_converter.cpp  test_generator_filters.cpp  test_pipeline.cpp  test_transform_filters.cpp  test_wav_io.cpp  test_waveform.cpp
